--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14.17.0'
-      - run: yarn install && CI=false yarn run build
-        working-directory: ./web
+      # - run: yarn install && CI=false yarn run build
+      #   working-directory: ./web
 
 
   backend:
@@ -24,15 +24,15 @@ jobs:
         with:
           go-version: '^1.16.5'
       - run: go version
-      - name: Build
-        run: |
-          go build -race -ldflags "-extldflags '-static'"
-        working-directory: ./
+      # - name: Build
+      #   run: |
+      #     go build -race -ldflags "-extldflags '-static'"
+      #   working-directory: ./
 
   release-and-push:
     name: Release And Push
     runs-on: ubuntu-latest
-    if: github.repository == 'casbin/casdoor' && github.event_name == 'push'
+    if: github.repository == 'ComradeProgrammer/casdoor' && github.event_name == 'push'
     needs: [ frontend, backend ]
     steps:
       - name: Checkout
@@ -80,15 +80,14 @@ jobs:
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
-        if: github.repository == 'casbin/casdoor' && github.event_name == 'push' &&steps.should_push.outputs.push=='true'
+        if: github.repository == 'ComradeProgrammer/casdoor' && github.event_name == 'push' &&steps.should_push.outputs.push=='true'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-          
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
-        if: github.repository == 'casbin/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
+        if: github.repository == 'ComradeProgrammer/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
         with:
           push: true
-          tags: casbin/casdoor:${{steps.get-current-tag.outputs.tag }}
+          tags: tangjiaming1999/casdoor:${{steps.get-current-tag.outputs.tag }}
